objects/Milestone__c.object
<CustomObject><fields>
        <fullName>Comments__c</fullName>
        <description>6/8/2015 - Created by Marc for WF 789548.</description>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Completion_Date__c</fullName>
        <description>The PE milestones completion date</description>
        <label>Completion Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Milestone_Purpose__c</fullName>
        <label>Milestone Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Facing</fullName>
                    <default>true</default>
                    <label>Customer Facing</label>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Milestone_description__c</fullName>
        <description>will be description of the field...</description>
        <label>Milestone Description</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Planned_Due_Date__c</fullName>
        <description>planned due date to complete the milestone...</description>
        <label>Planned Due Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Project__c</fullName>
        <description>parent project record of the record</description>
        <label>Project</label>
        <referenceTo>MW_Project__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Underway</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Not Achieved</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>CSG</fullName>
                </value>
                <value>
                    <fullName>ASG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Success_criteria__c</fullName>
        <description>success criteria of the milestone will be captured in this field...
character limit 32000
visible lines 5</description>
        <label>Success Criteria</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Type__c</fullName>
        <description>type of milestone...</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Milestone</label><nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Milestone Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Milestones</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility><validationRules>
        <fullName>Milestone_Completion_Date</fullName>
        <active>true</active>
        <description>The Milestone Completion Date can only be specified for competed milestones</description>
        <errorConditionFormula>AND(  NOT ISPICKVAL(Status__c, "Completed"), NOT ISBLANK( Completion_Date__c ) )</errorConditionFormula>
        <errorDisplayField>Completion_Date__c</errorDisplayField>
        <errorMessage>The Milestone Completion Date can only be specified for competed milestones</errorMessage>
    </validationRules></CustomObject>